2011-01-17  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/bezout.spad.pamphlet,
	src/algebra/fortran.spad.pamphlet,
	src/algebra/poly.spad.pamphlet,
	src/algebra/ffnb.spad.pamphlet,
	src/interp/int-top.boot, src/interp/s-parser.boot,
	src/interp/macros.lisp, src/interp/vmlisp.lisp:
	Misc cleanups.

2011-01-15  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/msgdb.boot, src/interp/nruncomp.boot,
	src/interp/debug.lisp, src/interp/functor.boot,
	src/interp/i-output.boot, src/interp/c-util.boot,
	src/interp/setq.lisp, src/interp/macros.lisp:
	Misc cleanups.

2011-01-14  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
	    Martin Rubey  <martin.rubey@math.uni-hannover.de>

	* src/algebra/mantepse.spad.pamphlet,
	src/algebra/modhpsol.spad.pamphlet: Guessing of
	algebraic dependencies.

2011-01-14  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/info.boot:knownInfo1(): Also consider
	source when comparing signatures.

2011-01-11  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/i-funsel.boot: Avoid unwanted numeric
	evaluation.

2011-01-08  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/naalgc.spad.pamphlet,
	src/algebra/odealg.spad.pamphlet,
	src/algebra/divisor.spad.pamphlet,
	src/algebra/intclos.spad.pamphlet,
	src/algebra/algcat.spad.pamphlet: Fix confusion
	with regularRepresentation.

2011-01-08  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/naalgc.spad.pamphlet,
	src/algebra/lie.spad.pamphlet: Fix leftRankPolynomial.

2011-01-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/macros.lisp: Add format specific output
	functions.
	src/algebra/html.spad.pamphlet: Use sayHtml.

2011-01-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/define.boot: Handle toplevel 'where'.

2010-12-15  Ralf Hemmecke  <ralf@hemmecke.de>

	* configure.ac, INSTALL: rename from --with-... to --enable-...
	  --with-algebra-optimization ==> --enable-algebra-optimization