@@ -1,3 +1,10 @@
+2011-02-06  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+	    Alexander Solovets <asolovets@gmail.com>
+
+	* src/lisp/fricas-lisp.lisp, src/lisp/fricas-package.lisp,
+	src/interp/int-top.boot, src/sman/sman.c: Support '-eval'
+	command line argument.
+
 2011-01-17  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	* src/algebra/bezout.spad.pamphlet,
